[package]
name = "sum-long-text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
llm-chain = {version = "0.9.0", features = ["async"]}
llm-chain-openai = "0.9.0"
tiktoken-rs = "0.4.2"
tokio = {version = "1.28.0", features = ["full"]}
